[project]
name = "langchain-test"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "unstructured-inference>=1.6.13",
    "unstructured[pdf]>=0.23.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
]
